--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap");
 
 /* *********************** TABLE OF CONTENTS ********************* */
 /* ROOT/SHARED                                                     */
@@ -14,47 +13,55 @@
 /* MEDIA QUERIES                                                   */
 /* *********************** TABLE OF CONTENTS ********************* */
 
-
 /* ROOT/SHARED                                                     */
 
 :root {
-    /* Colors */
- --bkgd: rgb(144, 144, 146);
- --sea: #acc9e9;
- /* --line: #337bcc; */
- --line: white;
- --sunk: #e9acac;  
- --player1: #7da8f6;
- --player1acc: #678aca;
- --player2: #f67d7d;
- --player2acc: #ca6767;
- --pur: #af9fb5;
- --blu: #9292c3;
- /* --blu: black; */
- --grn: #7b827b;
- --yel: #dbcf90;
- --org: #b49e74;
- --red: #905e5e;
- --font-fancy: "Black Ops One", serif;
- --font-emoji:  "Noto Color Emoji", serif;
+  /* Colors */
+  --bkgd: #86898f;
+  --text: #1a1918;
+  --sea: #8292a6;
+
+  /* --line: #337bcc; */
+  --line: #ceced6;
+  /* --hit: #b1830c; */
+  --hit: #aa7763;
+  --miss: #52667f;
+  --sunk: #524753;
+  /* loser colors are swapped */
+  --end-game1: #8c5d5a;
+  --end-game2: #282e50;
+
+  --player1: #1e1e3a;
+  /* --player1acc: #678aca; */
+  --player2: #812538;
+  /* --player2acc: #ca6767; */
+  /* --pur: #af9fb5;
+  --blu: #9292c3; */
+  /* --blu: black; */
+  /* --grn: #7b827b;
+  --yel: #dbcf90;
+  --org: #b49e74;
+  --red: #905e5e; */
+  --font-fancy: "Black Ops One", serif;
+  --font-emoji: "Noto Color Emoji", serif;
 }
 
 .font-fancy {
-    font-family: var(--font-fancy);
+  font-family: var(--font-fancy);
 }
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: var(--bkgd); 
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--bkgd);
+  margin: 0;
 }
 
 /* .flex-row {
@@ -72,95 +79,126 @@ body {
 } */
 
 #header {
-    padding: 1rem;
+  color: var(--text);
+  padding: 1rem;
 }
 
 #title-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 #title-text {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 #MMM {
-    font-size: .8rem;
-    text-align: center;
+  font-size: 0.8rem;
+  text-align: center;
+}
+
+#messages {
+  height: 3rem;
+  width: 22rem;
+  background-color: var(--line);
+    border-radius: 1rem;
+  font-family: var(--font-fancy);
+  text-align: center;
+  
 }
 
 #game-content {
-    /* height: fit-content;
+  /* height: fit-content;
     width: 22rem;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center; */
-    /* background-color: #ffb6c1; */
+  /* background-color: #ffb6c1; */
 }
-
 
 #board-container {
-    height: fit-content;
-    width: fit-content;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    /* background-color: var(--sea); */
-    /* margin: 1rem; */
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  /* background-color: var(--sea); */
+  /* margin: 1rem; */
 }
 
-#p1-full-board, #p2-full-board {
-    height: 22rem;
-    width: 22rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    /* background-color: red; */
-    font-family: var(--font-emoji);
-    /* margin: .5rem; */
-    overflow: visible;
+#p1-full-board,
+#p2-full-board {
+  height: 23rem;
+  width: 22rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  /* background-color: red; */
+    border-left: 1rem solid;
+  border-right: 1rem solid;
+  border-bottom: 1rem solid;
+  border-top: 0.25rem solid;
+  border-radius: 1rem;
+
+  color: var(--line);
+  /* font-family: var(--font-emoji); */
+  font-family: var(--font-fancy);
+  font-size: 1rem;
+  /* margin: .5rem; */
+    margin: 0.25rem;
+  overflow: visible;
+    z-index: -2;
 }
 
 #p1-full-board {
-    border: 16px solid darkblue;
+  background-color: var(--player1);
+  /* border: 16px solid darkblue; */
+  border-color: var(--player1);
+
 }
 
 #p2-full-board {
-    border: 16px solid darkred;
+  background-color: var(--player2);
+  border-color: var(--player2);
+
 }
 
-
-#p1-ship-board, #p2-ship-board, #p1-status-board, #p2-status-board {
-    height: 20rem;
-    width: 22rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    overflow: visible;
+#p1-ship-board,
+#p2-ship-board,
+#p1-status-board,
+#p2-status-board {
+  height: 20rem;
+  width: 22rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  overflow: visible;
 }
 
-
-#p1-ship-board, #p2-ship-board{
-    background-color: var(--sea);
-    z-index: -1;
+#p1-ship-board,
+#p2-ship-board {
+  background-color: var(--sea);
+  z-index: -1;
 }
 
 /* Negative margins cause the overlapping */
-#p1-status-board, #p2-status-board{
-    /* z-index: -2; */
-    margin-top: -20rem; 
+#p1-status-board,
+#p2-status-board {
+  height: auto;
+  width: 22rem;
+  font-family: var(--font-emoji);
+  /* z-index: -2; */
+  margin-top: -20.5rem;
 }
-
-
 
 /* .board-cell1, .board-cell2 {
     height: 2rem;
@@ -175,34 +213,40 @@ body {
     text-align: center;
 } */
 
-.ship-cells1, .ship-cells2, .hit-miss-cells1, .hit-miss-cells2  {
-    height: 2rem;
-    width: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* background-color: var(--sea); */
-    border: .25px solid var(--line);
-    font-family: var(--font-emoji);
-    font-size: 100%;
-    /* margin: .25rem; */
-    /* opacity: .5; */
-    text-align: center;
+.ship-cells1,
+.ship-cells2,
+.hit-miss-cells1,
+.hit-miss-cells2 {
+  height: 2rem;
+  width: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: var(--sea); */
+  /* border: .25px solid var(--line); */
+  font-family: var(--font-emoji);
+  font-size: 100%;
+  /* margin: .25rem; */
+  /* opacity: .5; */
+  text-align: center;
 }
 
-.ship-cells1, .ship-cells2 {
-    /* background-color: red; */
-        /* background-color: var(--sea); */
-    /* z-index: 0 */
+.ship-cells1,
+.ship-cells2 {
+  /* background-color: red; */
+  /* background-color: var(--sea); */
+  border: 0.25px dashed var(--line);
+  /* z-index: 0 */
 }
 
-.hit-miss-cells1, .hit-miss-cells2 {
-    /* background-color: none; */
-    /* z-index: 10 */
+.hit-miss-cells1,
+.hit-miss-cells2 {
+  /* background-color: none; */
+  /* z-index: 10 */
 }
 
 .sunk {
-    background-color: var(--sunk);
+  background-color: var(--sunk);
 }
 
 /* .test {
@@ -213,19 +257,19 @@ body {
 } */
 
 .ship {
-/* height: 2rem; */
-/* width: auto; */
-/* change background if sunk!!! */
-/* background-color: var(--sunk);  */
-/* transform: rotate(90deg); */
-/* z-index: 1; */
+  height: 2rem;
+  /* width: auto; */
+  /* change background if sunk!!! */
+  /* background-color: var(--sunk);  */
+  /* transform: rotate(90deg); */
+  /* z-index: 1; */
 }
 
 .hit {
-/* height: 2rem; */
-/* width: auto; */
-/* background-color: none; */
-/* transform: rotate(180deg); */
-/* transition: transform 0.5s ease; */
-/* z-index: 10; */
+  /* height: 2rem; */
+  /* width: auto; */
+  /* background-color: none; */
+  /* transform: rotate(180deg); */
+  /* transition: transform 0.5s ease; */
+  /* z-index: 10; */
 }
