--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -28,13 +28,14 @@
   --miss: #52667f;
   --sunk: #524753;
   /* loser colors are swapped */
-  --end-game1: #8c5d5a;
-  --end-game2: #282e50;
+  --loser: #903a3a;
 
-  --player1: #1e1e3a;
-  /* --player1acc: #678aca; */
-  --player2: #812538;
-  /* --player2acc: #ca6767; */
+  --player1: #23233f;
+  --player2: #314434;
+  /* --enemy: #812538; */
+    --enemy: #fecc03;
+
+
   /* --pur: #af9fb5;
   --blu: #9292c3; */
   /* --blu: black; */
@@ -133,7 +134,7 @@ body {
 
 #p1-full-board,
 #p2-full-board {
-  height: 23rem;
+  height: 50rem;
   width: 22rem;
   display: flex;
   flex-direction: row;
@@ -150,10 +151,12 @@ body {
   color: var(--line);
   /* font-family: var(--font-emoji); */
   font-family: var(--font-fancy);
-  font-size: 1rem;
+  font-size: 1.5rem;
+  
   /* margin: .5rem; */
     margin: 0.25rem;
   overflow: visible;
+  text-transform: uppercase;
     z-index: -2;
 }
 
@@ -161,19 +164,44 @@ body {
   background-color: var(--player1);
   /* border: 16px solid darkblue; */
   border-color: var(--player1);
-
+  /* display: none; */
 }
 
 #p2-full-board {
   background-color: var(--player2);
   border-color: var(--player2);
+  /* display: none; */
+}
 
+#p1-deployment-zone, #p1-target-zone,
+#p2-deployment-zone, #p2-target-zone {
+  height: 23rem;
+  width: 20rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  font-family: var(--font-fancy);
+  font-size: 1rem;
+  margin: 0.25rem;
+  overflow: visible;
+   text-transform: capitalize;
+  z-index: -2;
+}
+
+#p1-target-zone, #p2-target-zone {
+  color: var(--enemy);
 }
 
 #p1-ship-board,
 #p2-ship-board,
 #p1-status-board,
-#p2-status-board {
+#p2-status-board,
+#p1-target-ship-board,
+#p2-target-ship-board,
+#p1-target-status-board,
+#p2-target-status-board {
   height: 20rem;
   width: 22rem;
   display: flex;
@@ -185,19 +213,23 @@ body {
 }
 
 #p1-ship-board,
-#p2-ship-board {
+#p2-ship-board, 
+#p1-target-ship-board,
+#p2-target-ship-board {
   background-color: var(--sea);
   z-index: -1;
 }
 
 /* Negative margins cause the overlapping */
 #p1-status-board,
-#p2-status-board {
+#p2-status-board, 
+#p1-target-status-board,
+#p2-target-status-board {
   height: auto;
   width: 22rem;
   font-family: var(--font-emoji);
   /* z-index: -2; */
-  margin-top: -20.5rem;
+  margin-top: -21rem;
 }
 
 /* .board-cell1, .board-cell2 {
@@ -243,6 +275,14 @@ body {
 .hit-miss-cells2 {
   /* background-color: none; */
   /* z-index: 10 */
+}
+
+.target-cells1,
+.target-cells2 {
+  /* background-color: red; */
+  /* background-color: var(--sea); */
+  border: 0.25px dashed var(--enemy);
+  /* z-index: 0 */
 }
 
 .sunk {
