--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -23,12 +23,14 @@
   /* --green: #627264; */
    --green: #444e45;
   --text: #1a1918;
-  --sea: #8292a6;
+  --sea-lt: #bdd2ed;
+    --sea-dk: #7ea3d1;
   --line: #ceced6;
   --hit: #aa7763;
   --miss: #52667f;
   --sunk: #524753;
   --loser: #903a3a;
+  --radar: #374713;
   --player1: #2f2f4f;
   --player1text: #9090cb;
   --player2: #3c4a3e;
@@ -107,13 +109,17 @@ body {
 #messages {
   height: fit-content;
   width: 22rem;
-  display: flex;
+  /* display: flex; */
+    display: none;
   align-items: center;
   justify-content: center;
-  background-color: var(--text);
+  /* background-color: var(--text); */
+  background-color: var(--enemy);
+  border: .5rem solid var(--text);
   border-radius: 1rem;
   box-shadow: var(--box-shadow-green);
-  color: var(--line);
+  /* color: var(--line); */
+    color: var(--text);
   font-family: var(--font-fancy);
   font-size: 1rem;
   margin-bottom: 1rem;
@@ -125,8 +131,12 @@ body {
     2px 2px 3px rgba(255, 253, 253, 0.25); */
 }
 
-/* #message-bar {  height: 5rem;
-  width: 22rem;} */
+#message-bar {  
+  height: fit-content;
+  width: 22rem;
+/* background-color: var(--enemy); */
+}
+
 
 #start-content {
   height: auto;
@@ -143,7 +153,7 @@ body {
   /* text-align: center; */
 }
 
-.btn {
+.btn-a {
   height: 3rem;
   width: 22rem;
   background-color: var(--line);
@@ -158,20 +168,47 @@ body {
   padding: .25rem;
 }
 
-.btn:hover {
+.btn-a:hover {
   background-color: var(--enemy);
   scale: 1.05;
 }
 
-.btn:active {
+.btn-a:active {
   background-color: var(--text);
   color: var(--enemy);
   scale: .95;
 }
 
-#btn-pvsc, #btn-pvsp {
-
+.btn-b {
+  height: 2rem;
+  width: 4.25rem;
+  background-color: var(--line);
+  border: none;
+  border-radius: 1rem;
+    box-shadow: var(--box-shadow-green);
+  color: var(--text);
+  font-family: var(--font-fancy);
+  font-size: .875rem;
+  /* gap: 1rem; */
+  margin: .25rem;
+  outline: none;
+  padding: .125rem;
 }
+
+.btn-b:hover {
+  background-color: var(--enemy);
+  scale: 1.05;
+}
+
+.btn-b:active {
+  background-color: var(--text);
+  color: var(--enemy);
+  scale: .95;
+}
+
+/* #btn-pvsc, #btn-pvsp {
+
+} */
 
 /* #btn-pvsc:active {
   background-color: var(--player1);
@@ -257,9 +294,10 @@ body {
   background-color: var(--player2);
   border-color: var(--player2);
   color: var(--player2text);
-  display: none;
+  /* display: none; */
 }
 
+#p0-place-ships,
 #p1-deployment-zone,
 #p1-target-zone,
 #p2-deployment-zone,
@@ -279,14 +317,112 @@ body {
   /* z-index: 0; */
 }
 
+#p0-place-ships,
 #p1-deployment-zone,
 #p2-deployment-zone {
   color: var(--line);
 }
 
+#p0-place-ships {
+  height: 23rem;
+  width: 20rem;
+    display: none;
+  /* display: flex; */
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+  align-items: center;
+  justify-content: center;
+  /* background-color: var(--loser); */
+      /* padding: .25rem; */
+      text-align: center;
+      text-transform: none;
+}
+
+#p0-x5-grid {
+    height: 14rem;
+  width: 14rem;
+    display: flex;
+  flex-direction: column;
+  flex-wrap: no-wrap;
+  align-items: center;
+  justify-content: center; 
+  gap: .25rem;
+    /* background-color: var(--hit); */
+    /* background-color: var(--sea); */
+    background-image: url("/src/assets/radarScreen.svg");
+    background-color: var(--sea-lt);
+    /* border: .125rem dotted var(--green); */
+    /* border-radius: .75rem; */
+    border-radius: 50%;
+     /* box-shadow: 0px 0px 40px 0px #0ff; */
+    /* padding: 0rem 0rem -.0125rem 0rem; */
+    margin: .5rem;
+    /* animation:spin 10s linear infinite; */
+
+/* 
+    transform: rotate(0deg); */
+}
+@keyframes spin{
+	from{transform:rotate(0deg)}
+	to{transform:rotate(360deg)}	
+}
+
+/* .place-ship {
+  height: 2rem;
+} */
+
+/* #place-a, #place-b, #place-d, #place-s, #place-c {
+  height: 2rem;
+}
+
+#place-a:hover, #place-b:hover, #place-d:hover, #place-s:hover, #place-c:hover {
+  scale: 2;
+}
+#place-a:active, #place-b:active, #place-d:active, #place-s:active, #place-c:active {
+  scale: 1.25;
+} */
+
+.place-ship {
+  height: 2rem;
+}
+
+.place-ship:hover {
+   scale: 1.75;
+}
+
+.place-ship:active {
+  scale: 1.25;
+}
+
+ #place-a {
+       /* box-shadow: 0px 0px 10px 1px #0ff; */
+  margin: 1.25rem 1rem 1rem 1rem;
+ }
+
+  /* .ship-c {
+  margin-top:-.25rem
+ } */
+
+ #p0-btn-container {
+  height: auto;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  /* background-color: yellow; */
+ }
+
 #p1-target-zone,
 #p2-target-zone {
   color: var(--enemy);
+}
+
+#p1-target-zone {
+  /* display: none; */
+}
+
+#p2-target-zone {
+  /* display: none; */
 }
 
 #p1-ship-board,
@@ -311,7 +447,7 @@ body {
 #p2-ship-board,
 #p1-target-ship-board,
 #p2-target-ship-board {
-  background-color: var(--sea);
+  background-color: var(--sea-dk);
   /* z-index: -1; */
 }
 
@@ -357,7 +493,10 @@ body {
 
 .ship {
   height: 2rem;
+  /* width: .25rem; */
 }
+
+
 
 .hit {
 }
@@ -367,6 +506,19 @@ body {
   align-items: center;
   justify-content: center;
 } */
+
+.mouse-deploy:hover {
+  background-color: var(--line);
+  border: 0.25rem dashed var(--loser);
+  scale: 1.25;
+}
+
+.mouse-deploy:active {
+  background-color: var(--loser);
+  border: 0.25rem dashed var(--enemy);
+  /* scale: .9; */
+}
+
 .mouse-target:hover {
   background-color: var(--enemy);
   border: 0.25rem dashed var(--loser);
