refactoring more non-DRY modules

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -168,7 +168,7 @@ body {
   /* background-color: var(--enemy); */
 }
 
-#start-content {
+#main-btn-container {
   height: auto;
   width: 22rem;
   /* background-color: var(--line); */
