player vs machine game is wired up with turn based attacks, fix misfires

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -317,6 +317,7 @@ justify-content: center;
   border-color: var(--player2text);
   color: var(--player2text);
   display: none;
+    /* display: flex; */
 }
 
 #p1-deployment-zone,
@@ -483,6 +484,7 @@ margin: -1rem;
 
 #p2-target-zone {
   display: none;
+  /* display: flex; */
 }
 
 #p1-ship-board,
