--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -236,6 +236,8 @@ body {
   scale: 0.95;
 }
 
+
+/* TODO - CONSOLIDATE THESE IF THERE ARE NO ADDITIONAL CHANGES! */
 #btn-pvsc, #btn-pvsp {
 display: flex;
 align-items: center;
@@ -249,6 +251,12 @@ justify-content: center;
 }
 
 #btn-start-game {
+display: none;
+align-items: center;
+justify-content: center;
+}
+
+#btn-pass-device {
 display: none;
 align-items: center;
 justify-content: center;
