--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -175,7 +175,7 @@ body {
   border-radius: 1rem;
   /* box-shadow: var(--box-shadow-green); */
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-family: var(--font-fancy);
@@ -184,7 +184,9 @@ body {
 }
 
 .btn-a {
-  height: 3rem;
+  /* height: 3rem; */
+  /* height: auto; */
+  height: fit-content;
   width: 22rem;
   background-color: var(--line);
   border: none;
@@ -196,6 +198,7 @@ body {
   margin: 0.25rem;
   outline: none;
   padding: 0.25rem;
+  text-align: center;
 }
 
 .btn-a:hover {
